--- a/tools/Rmd/causal_model.Rmd
+++ b/tools/Rmd/causal_model.Rmd
@@ -27,6 +27,7 @@ library(interactions)
 library(ppcor)
 library(Hmisc)
 
+library(survcomp) # for fisher's C test, combine.test()
 library(piecewiseSEM)
 library(DiagrammeR)
 library(graph)
@@ -66,14 +67,14 @@ mean_u <- 1.25e-8
 avg_rec_spans <- c(1e+3, 1e+4, 1e+5)
 avg_mut_spans <- c(1e+3, 1e+4, 1e+5)
 exon_lengths <- 1000
-num_exons <- c(600, 3000, 7500)
-L <- 3e+7
+num_exons <- c(5000, 10000, 25000)
+L <- 1e+8
 mult_r_u <- c(0, 0.05, 0.1, 0.25) # non-mutagenic recomb. is a special case
 
-p_switch <- 0.25 # related to auto-correlation in the distribution of elements
-# note since average length of intergenic > exon_lengths, p_switch > 0 => AR > 0
+p_stay <- 0.25 # related to auto-correlation in the distribution of elements
+# note since average length of intergenic > exon_lengths, p_stay > 0 => AR > 0
 
-models <- setDT(crossing(L, p_switch, num_exons, exon_lengths, mult_r_u,
+models <- setDT(crossing(L, p_stay, num_exons, exon_lengths, mult_r_u,
                          mean_r, mean_u, shapes_rate_u, shapes_rate_r,
                          avg_rec_spans, avg_mut_spans))
 models$model <- 1:nrow(models)
@@ -82,6 +83,7 @@ Sys.setenv(num_models=nrow(models))
 Sys.setenv(num_reps=10)
 
 fwrite(models, "models.csv")
+models <- fread("models.csv")
 ```
 
 ```{bash, mk-dirs, engine.opts='-i', include=T, eval=T, results=F, warning=F}
@@ -105,7 +107,7 @@ We use the models to assemble the genomic maps
 ```{r, build-chr-maps, include=F, message=F, warning=F}
 
 for(m in 1:num_models) {
-
+  print(paste(m, Sys.Date(), Sys.time()), sep="\t")
   bin_size <- 1e+3 # "basal" scale, larger windows are built after
   L <- models$L[m]
   V <- L - models$num_exons[m] * models$exon_lengths[m]
@@ -132,7 +134,7 @@ for(m in 1:num_models) {
     # Introducing clusters of exonic and integenic sites (for "realism" ++)
     # this function avoids problems with sample from vector with length == 1
     resample <- function(x) x[sample.int(length(x))][1] 
-    p_switch <- models$p_switch[m] # symmetric auto-correlation
+    p_stay <- models$p_stay[m] # symmetric auto-correlation
     is_exonic <- chr_elements[1] == models$exon_lengths[m]
     
     new_elements <- numeric(length=length(chr_elements)) # init
@@ -149,7 +151,7 @@ for(m in 1:num_models) {
           chr_elements <- chr_elements[-idx] # removes sampled item
         } else { # we ran out of intergenic regions
           is_exonic <- T
-          p_switch <- 1
+          p_stay <- 1
           
           val <- resample(chr_elements[chr_elements==models$exon_lengths[m]]) 
           idx <- which(chr_elements==val)[1] # first occurrence of val in elems
@@ -167,7 +169,7 @@ for(m in 1:num_models) {
           chr_elements <- chr_elements[-idx] # removes sampled item
         } else { # we ran out of exons
           is_exonic <- F
-          p_switch <- 1
+          p_stay <- 1
           
           val <- resample(chr_elements[chr_elements!=models$exon_lengths[m]])
           idx <- which(chr_elements==val)[1] # first occurrence of val in elems
@@ -177,7 +179,7 @@ for(m in 1:num_models) {
         }
       }
     
-      if(runif(1, 0, 1) > p_switch) { # switch from/to exonic/intergenic
+      if(runif(1, 0, 1) > p_stay) { # switch from/to exonic/intergenic
         is_exonic <- !is_exonic
       }
     }
@@ -795,10 +797,11 @@ D3g <- DAG(
   B~avg_rec,
   B~exonic_sites,
   B~avg_mut,
-  #pi_del_exp~B,
+  pi_del_exp~B,
+  pi_del_exp~avg_mut,
   pi_neu_sim~B,
   pi_neu_sim~avg_mut,
-  #sim_pi~pi_del_exp,
+  sim_pi~pi_del_exp,
   sim_pi~pi_neu_sim
 )
 
@@ -807,10 +810,11 @@ D4g <- DAG(
   B~avg_rec,
   B~exonic_sites,
   B~avg_mut,
-  #pi_del_exp~B,
+  pi_del_exp~B,
+  pi_del_exp~avg_mut,
   pi_neu_sim~B,
   pi_neu_sim~avg_mut,
-  #sim_pi~pi_del_exp,
+  sim_pi~pi_del_exp,
   sim_pi~pi_neu_sim
 )
 
@@ -827,95 +831,301 @@ artificially constructed maps.
 
 Therefore, there is no interference in these data.
 
-```{r d-sep, include=F, message=F, warning=F}
+```{r d-sep-DAG1, include=F, message=F, warning=F}
 
-tbl <- fread("model_1/rep_1/tbl_1kb.csv.gz") # testing
-basis_set <- bs1
-
-for(i in 1:length(basis_set)) {
-  
-  var1 <- basis_set[[i]][1]
-  var2 <- basis_set[[i]][2]
-  
-  cond <- NULL
-  if(length(basis_set[[i]]) > 2) {
-    cond <- basis_set[[i]][3:length(basis_set[[i]])]
-  }
-  
-  dSep(D1g, var1, var2, cond)
-  
-  if(length(basis_set[[i]]) > 2) {
-    print(ppcor::pcor.test(tbl[, ..var1], tbl[, ..var2], tbl[, ..cond],
-                           method="spearman"))
-  } else {
-    print(cor.test(tbl[, ..var1][[1]], tbl[, ..var2][[1]], method="spearman"))
-  }
-}
-```
-
-The good old linear models (but not only)
-
-```{r lms, include=F, message=F, warning=F}
-
-for(m in 1:num_models) {
-  
-  for(r in 1:num_reps) {
+basis_set <- bs1 # testing non-mutagenic recomb. model
+weights <- rep(1, length=length(basis_set))
     
-    maps_1kb <- fread(paste("model_", m, "/rep_", r, "/tbl_1kb.csv.gz", sep=""))
+DAG1_c_1kb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+DAG1_c_10kb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+DAG1_c_100kb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+DAG1_c_1Mb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+
+# NOTE: interpreting Fisher's C test is tricky because of auto-correlation
+# within each of the genomic maps. Looking at larger scales is more informative
+names(DAG1_c_1kb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+names(DAG1_c_10kb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+names(DAG1_c_100kb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+names(DAG1_c_1Mb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+
+pb <- txtProgressBar(min=0, max=num_models, style=3)  
+for(m in 1:num_models) {
+  setTxtProgressBar(pb, m)
+  for(rep in 1:num_reps) {
+    
+    maps_1kb <- fread(paste("model_", m, "/rep_", rep, 
+                            "/tbl_1kb.csv.gz", sep=""))
+    data_cols <- names(maps_1kb)[4:ncol(maps_1kb)]
     
     maps_1kb$bin_10kb <- (1:nrow(maps_1kb) - 1) %/% 10
     maps_1kb$bin_100kb <- (1:nrow(maps_1kb) - 1) %/% 100
     maps_1kb$bin_1Mb <- (1:nrow(maps_1kb) - 1) %/% 1000
+    
     maps_10kb <- maps_1kb %>%
                  group_by(bin_10kb) %>% 
-                 summarise_at(c("avg_mut", "avg_rec", "exonic_sites"), mean)
+                 summarise_at(data_cols, mean) %>%
+                 dplyr::select(., -bin_10kb) %>% as.data.table()
+    
+    maps_100kb <- maps_1kb %>%
+                  group_by(bin_100kb) %>% 
+                  summarise_at(data_cols, mean) %>%
+                  dplyr::select(., -bin_100kb) %>% as.data.table()
+    
+    maps_1Mb <- maps_1kb %>%
+                group_by(bin_1Mb) %>% 
+                summarise_at(data_cols, mean) %>%
+                dplyr::select(., -bin_1Mb) %>% as.data.table()
+    
+    maps_1kb <- dplyr::select(maps_1kb, data_cols)
+
+    pvals_1kb <- numeric(length=length(basis_set))
+    pvals_10kb <- numeric(length=length(basis_set))
+    pvals_100kb <- numeric(length=length(basis_set))
+    pvals_1Mb <- numeric(length=length(basis_set))
+    
+    for(i in 1:length(basis_set)) {
+      
+      var1 <- basis_set[[i]][1]
+      var2 <- basis_set[[i]][2]
+      
+      cond <- NULL
+      if(length(basis_set[[i]]) > 2) {
+        cond <- basis_set[[i]][3:length(basis_set[[i]])]
+      }
+      
+      dSep(D1g, var1, var2, cond)
+      
+      if(length(basis_set[[i]]) > 2) {
+         pvals_1kb[i] <- ppcor::pcor.test(maps_1kb[, ..var1], 
+                                          maps_1kb[, ..var2], 
+                                          maps_1kb[, ..cond],
+                                          method="spearman")$p.value
+         
+         pvals_10kb[i] <- ppcor::pcor.test(maps_10kb[, ..var1], 
+                                           maps_10kb[, ..var2], 
+                                           maps_10kb[, ..cond],
+                                           method="spearman")$p.value
+         
+         pvals_100kb[i] <- ppcor::pcor.test(maps_100kb[, ..var1], 
+                                            maps_100kb[, ..var2], 
+                                            maps_100kb[, ..cond],
+                                            method="spearman")$p.value
+         
+         pvals_1Mb[i] <- ppcor::pcor.test(maps_1Mb[, ..var1], 
+                                          maps_1Mb[, ..var2], 
+                                          maps_1Mb[, ..cond],
+                                          method="spearman")$p.value
+         
+      } else {
+        pvals_1kb[i] <- cor.test(maps_1kb[, ..var1][[1]],
+                                 maps_1kb[, ..var2][[1]],
+                                 method="spearman")$p.value
+        
+        pvals_10kb[i] <- cor.test(maps_10kb[, ..var1][[1]],
+                                  maps_10kb[, ..var2][[1]],
+                                  method="spearman")$p.value
+        
+        pvals_100kb[i] <- cor.test(maps_100kb[, ..var1][[1]],
+                                   maps_100kb[, ..var2][[1]],
+                                   method="spearman")$p.value
+        
+        pvals_1Mb[i] <- cor.test(maps_1Mb[, ..var1][[1]],
+                                 maps_1Mb[, ..var2][[1]],
+                                 method="spearman")$p.value
+      }
+    }
+
+    DAG1_c_1kb[m, rep] <- combine.test(pvals_1kb, weights, "fisher")
+    DAG1_c_10kb[m, rep] <- combine.test(pvals_10kb, weights, "fisher")
+    DAG1_c_100kb[m, rep] <- combine.test(pvals_100kb, weights, "fisher")
+    DAG1_c_1Mb[m, rep] <- combine.test(pvals_1Mb, weights, "fisher")
+  }
+}
+close(pb)
+
+fwrite(DAG1_c_1kb, "DAG1_c_1kb.csv")
+fwrite(DAG1_c_10kb, "DAG1_c_10kb.csv")
+fwrite(DAG1_c_100kb, "DAG1_c_100kb.csv")
+fwrite(DAG1_c_1Mb, "DAG1_c_1Mb.csv")
+```
+
+```{r d-sep-DAG2, include=F, message=F, warning=F}
+
+basis_set <- bs2 # testing non-mutagenic recomb. model
+weights <- rep(1, length=length(basis_set))
+    
+DAG2_c_1kb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+DAG2_c_10kb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+DAG2_c_100kb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+DAG2_c_1Mb <- as.data.frame(matrix(nrow=num_models, ncol=num_reps))
+
+# NOTE: interpreting Fisher's C test is tricky because of auto-correlation
+# within each of the genomic maps. Looking at larger scales is more informative
+names(DAG2_c_1kb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+names(DAG2_c_10kb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+names(DAG2_c_100kb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+names(DAG2_c_1Mb) <- paste("Fisher_C_rep_", 1:num_reps, sep="")
+
+pb <- txtProgressBar(min=0, max=num_models, style=3)  
+for(m in 1:num_models) {
+  setTxtProgressBar(pb, m)
+  for(rep in 1:num_reps) {
+    
+    maps_1kb <- fread(paste("model_", m, "/rep_", rep, 
+                            "/tbl_1kb.csv.gz", sep=""))
+    data_cols <- names(maps_1kb)[4:ncol(maps_1kb)]
+    
+    maps_1kb$bin_10kb <- (1:nrow(maps_1kb) - 1) %/% 10
+    maps_1kb$bin_100kb <- (1:nrow(maps_1kb) - 1) %/% 100
+    maps_1kb$bin_1Mb <- (1:nrow(maps_1kb) - 1) %/% 1000
+    
+    maps_10kb <- maps_1kb %>%
+                 group_by(bin_10kb) %>% 
+                 summarise_at(data_cols, mean) %>%
+                 dplyr::select(., -bin_10kb) %>% as.data.table()
+    
+    maps_100kb <- maps_1kb %>%
+                  group_by(bin_100kb) %>% 
+                  summarise_at(data_cols, mean) %>%
+                  dplyr::select(., -bin_100kb) %>% as.data.table()
+    
+    maps_1Mb <- maps_1kb %>%
+                group_by(bin_1Mb) %>% 
+                summarise_at(data_cols, mean) %>%
+                dplyr::select(., -bin_1Mb) %>% as.data.table()
+    
+    maps_1kb <- dplyr::select(maps_1kb, data_cols)
+
+    pvals_1kb <- numeric(length=length(basis_set))
+    pvals_10kb <- numeric(length=length(basis_set))
+    pvals_100kb <- numeric(length=length(basis_set))
+    pvals_1Mb <- numeric(length=length(basis_set))
+    
+    for(i in 1:length(basis_set)) {
+      
+      var1 <- basis_set[[i]][1]
+      var2 <- basis_set[[i]][2]
+      
+      cond <- NULL
+      if(length(basis_set[[i]]) > 2) {
+        cond <- basis_set[[i]][3:length(basis_set[[i]])]
+      }
+      
+      dSep(D1g, var1, var2, cond)
+      
+      if(length(basis_set[[i]]) > 2) {
+         pvals_1kb[i] <- ppcor::pcor.test(maps_1kb[, ..var1], 
+                                          maps_1kb[, ..var2], 
+                                          maps_1kb[, ..cond],
+                                          method="spearman")$p.value
+         
+         pvals_10kb[i] <- ppcor::pcor.test(maps_10kb[, ..var1], 
+                                           maps_10kb[, ..var2], 
+                                           maps_10kb[, ..cond],
+                                           method="spearman")$p.value
+         
+         pvals_100kb[i] <- ppcor::pcor.test(maps_100kb[, ..var1], 
+                                            maps_100kb[, ..var2], 
+                                            maps_100kb[, ..cond],
+                                            method="spearman")$p.value
+         
+         pvals_1Mb[i] <- ppcor::pcor.test(maps_1Mb[, ..var1], 
+                                          maps_1Mb[, ..var2], 
+                                          maps_1Mb[, ..cond],
+                                          method="spearman")$p.value
+         
+      } else {
+        pvals_1kb[i] <- cor.test(maps_1kb[, ..var1][[1]],
+                                 maps_1kb[, ..var2][[1]],
+                                 method="spearman")$p.value
+        
+        pvals_10kb[i] <- cor.test(maps_10kb[, ..var1][[1]],
+                                  maps_10kb[, ..var2][[1]],
+                                  method="spearman")$p.value
+        
+        pvals_100kb[i] <- cor.test(maps_100kb[, ..var1][[1]],
+                                   maps_100kb[, ..var2][[1]],
+                                   method="spearman")$p.value
+        
+        pvals_1Mb[i] <- cor.test(maps_1Mb[, ..var1][[1]],
+                                 maps_1Mb[, ..var2][[1]],
+                                 method="spearman")$p.value
+      }
+    }
+
+    DAG2_c_1kb[m, rep] <- combine.test(pvals_1kb, weights, "fisher")
+    DAG2_c_10kb[m, rep] <- combine.test(pvals_10kb, weights, "fisher")
+    DAG2_c_100kb[m, rep] <- combine.test(pvals_100kb, weights, "fisher")
+    DAG2_c_1Mb[m, rep] <- combine.test(pvals_1Mb, weights, "fisher")
+  }
+}
+close(pb)
+
+fwrite(DAG2_c_1kb, "DAG2_c_1kb.csv")
+fwrite(DAG2_c_10kb, "DAG2_c_10kb.csv")
+fwrite(DAG2_c_100kb, "DAG2_c_100kb.csv")
+fwrite(DAG2_c_1Mb, "DAG2_c_1Mb.csv")
+```
+
+Correlations and linear models fist
+
+```{r lms, include=F, message=F, warning=F}
+
+for(m in 1:num_models) {
+  print(paste(m, Sys.Date(), Sys.time()), sep="\t")
+  for(rep in 1:num_reps) {
+    
+    maps_1kb <- fread(paste("model_", m, "/rep_", rep, 
+                            "/tbl_1kb.csv.gz", sep=""))
+    data_cols <- names(maps_1kb)[4:ncol(maps_1kb)]
+    
+    maps_1kb$bin_10kb <- (1:nrow(maps_1kb) - 1) %/% 10
+    maps_1kb$bin_100kb <- (1:nrow(maps_1kb) - 1) %/% 100
+    maps_1kb$bin_1Mb <- (1:nrow(maps_1kb) - 1) %/% 1000
+    
+    maps_10kb <- maps_1kb %>%
+                 group_by(bin_10kb) %>% 
+                 summarise_at(data_cols, mean) %>%
+                 dplyr::select(., -bin_10kb)
+    
+    maps_100kb <- maps_1kb %>%
+                  group_by(bin_100kb) %>% 
+                  summarise_at(data_cols, mean) %>%
+                  dplyr::select(., -bin_100kb)
+    
+    maps_1Mb <- maps_1kb %>%
+                group_by(bin_1Mb) %>% 
+                summarise_at(data_cols, mean) %>%
+                dplyr::select(., -bin_1Mb)
     
     
-    t1kb=dplyr::select(maps_1kb, c(avg_rec,
-                                   avg_mut,
-                                   exonic_sites,
-                                   B,
-                                   pi_neu_sim))
-    mat=Hmisc::rcorr(as.matrix(t1kb), type="spearman")
+    maps_1kb <- dplyr::select(maps_1kb, data_cols)
+
+    mat=Hmisc::rcorr(as.matrix(maps_1kb), type="spearman")
     tbl_1kb <- mat$r
     tbl_1kb[upper.tri(tbl_1kb)] <- mat$P[upper.tri(mat$P)]
-    suppressMessages(fwrite(tbl_1kb, paste("model_", m, "/rep_", r, 
+    suppressMessages(fwrite(tbl_1kb, paste("model_", m, "/rep_", rep, 
                                            "/pval_upper_spearman_lower_1kb.csv", 
                                            sep="")))
-    
-    t10kb=dplyr::select(maps_10kb, c(avg_rec,
-                                     avg_mut,
-                                     exonic_sites,
-                                     B,
-                                     pi_neu_sim))
-    mat=Hmisc::rcorr(as.matrix(t10kb), type="spearman")
+
+    mat=Hmisc::rcorr(as.matrix(maps_10kb), type="spearman")
     tbl_10kb <- mat$r
-    tbl[upper.tri(tbl_10kb)] <- mat$P[upper.tri(mat$P)]
-    suppressMessages(fwrite(tbl_10kb, paste("model_", m, "/rep_", r, 
+    tbl_10kb[upper.tri(tbl_10kb)] <- mat$P[upper.tri(mat$P)]
+    suppressMessages(fwrite(tbl_10kb, paste("model_", m, "/rep_", rep, 
                                             "/pval_upper_spearman_lower_10kb.csv", 
                                             sep="")))
-    
-    t100kb=dplyr::select(maps_100kb, c(avg_rec,
-                                       avg_mut,
-                                       exonic_sites,
-                                       B,
-                                       pi_neu_sim))
-    mat=Hmisc::rcorr(as.matrix(t100kb), type="spearman")
+
+    mat=Hmisc::rcorr(as.matrix(maps_100kb), type="spearman")
     tbl_100kb <- mat$r
     tbl_100kb[upper.tri(tbl_100kb)] <- mat$P[upper.tri(mat$P)]
-    suppressMessages(fwrite(tbl_100kb, paste("model_", m, "/rep_", r, 
+    suppressMessages(fwrite(tbl_100kb, paste("model_", m, "/rep_", rep, 
                                              "/pval_upper_spearman_lower_100kb.csv", 
                                              sep="")))
-    
-    t1Mb=dplyr::select(maps_1Mb, c(avg_rec,
-                                   avg_mut,
-                                   exonic_sites,
-                                   B,
-                                   pi_neu_sim))
-    mat=Hmisc::rcorr(as.matrix(t1Mb), type="spearman")
+
+    mat=Hmisc::rcorr(as.matrix(maps_1Mb), type="spearman")
     tbl_1Mb <- mat$r
     tbl_1Mb[upper.tri(tbl_1Mb)] <- mat$P[upper.tri(mat$P)]
-    suppressMessages(fwrite(tbl_1Mb, paste("model_", m, "/rep_", r, 
+    suppressMessages(fwrite(tbl_1Mb, paste("model_", m, "/rep_", rep, 
                                            "/pval_upper_spearman_lower_1Mb.csv", 
                                            sep="")))
     
@@ -929,59 +1139,57 @@ for(m in 1:num_models) {
     names(r2_raw) <- "r2_typeI"
     r2_raw$scale <- c(1e+3, 1e+4, 1e+5, 1e+6) # rows are bin sizes
     
-    # tables for storing correlations with observed pi 
+    # tables for storing correlations with simulated pi (E[pi] + mut. var)
     corr_tbl <- as.data.frame(matrix(ncol=3, nrow=4))
     names(corr_tbl) <- c("u", "B", "Predicted")
     corr_tbl$scale <- c(1e+3, 1e+4, 1e+5, 1e+6) # rows are bin sizes
     
-    corr_tbl$Predicted[1] <- cor.test(maps_1kb$exp_pi, 
+    # table for storing p-values of tests related to lm assumptions
+    tests_tbl <- as.data.frame(matrix(ncol=3, nrow=4))
+    names(tests_tbl) <- c("DW_test_p", "HMC_test_p", "Shapiro_test_p")
+    tests_tbl$scale <- c(1e+3, 1e+4, 1e+5, 1e+6) # rows are bin sizes
+    
+    corr_tbl$Predicted[1] <- cor.test(maps_1kb$sim_pi, 
                                       maps_1kb$pi_exp, 
                                       method="pearson")$estimate 
-    corr_tbl$Predicted[2] <- cor.test(maps_10kb$exp_pi, 
+    corr_tbl$Predicted[2] <- cor.test(maps_10kb$sim_pi, 
                                       maps_10kb$pi_exp, 
                                       method="pearson")$estimate 
-    corr_tbl$Predicted[3] <- cor.test(maps_100kb$exp_pi, 
+    corr_tbl$Predicted[3] <- cor.test(maps_100kb$sim_pi, 
                                       maps_100kb$pi_exp,
                                       method="pearson")$estimate  
-    corr_tbl$Predicted[4] <- cor.test(maps_1Mb$exp_pi,
+    corr_tbl$Predicted[4] <- cor.test(maps_1Mb$sim_pi,
                                       maps_1Mb$pi_exp, 
                                       method="pearson")$estimate 
     
     corr_tbl$B[1] <- cor.test(maps_1kb$B, 
-                              maps_1kb$pi_exp,
+                              maps_1kb$sim_pi,
                               method="pearson")$estimate 
     corr_tbl$B[2] <- cor.test(maps_10kb$B, 
-                              maps_10kb$pi_exp, 
+                              maps_10kb$sim_pi, 
                               method="pearson")$estimate 
     corr_tbl$B[3] <- cor.test(maps_100kb$B,
-                              maps_100kb$pi_exp,
+                              maps_100kb$sim_pi,
                               method="pearson")$estimate  
     corr_tbl$B[4] <- cor.test(maps_1Mb$B,
-                              maps_1Mb$pi_exp, 
+                              maps_1Mb$sim_pi, 
                               method="pearson")$estimate 
     
     corr_tbl$u[1] <- cor.test(maps_1kb$avg_mut, 
-                              maps_1kb$pi_exp, 
+                              maps_1kb$sim_pi, 
                               method="pearson")$estimate 
     corr_tbl$u[2] <- cor.test(maps_10kb$avg_mut, 
-                              maps_10kb$pi_exp,
+                              maps_10kb$sim_pi,
                               method="pearson")$estimate 
     corr_tbl$u[3] <- cor.test(maps_100kb$avg_mut,
-                              maps_100kb$pi_exp, 
+                              maps_100kb$sim_pi, 
                               method="pearson")$estimate  
     corr_tbl$u[4] <- cor.test(maps_1Mb$avg_mut,
-                              maps_1Mb$pi_exp,
+                              maps_1Mb$sim_pi,
                               method="pearson")$estimate 
     
-    fwrite(corr_tbl, paste(prefix, "_pearson_avg_pi_tbl.csv", sep=""))
-    
-    if(sd(maps_1kb$avg_mut)==0) {
-      stop("Flat mutation map! Stopping execution, check Pearson cor. table.")  
-    }
-    
-    if(sd(maps_1kb$B)==0) {
-      stop("Flat B-map! Stopping execution, check Pearson cor. table.")  
-    }
+    fwrite(corr_tbl, paste("model_", m, "/rep_", rep, 
+                           "/pearson_sim_pi_tbl.csv", sep=""))
     
     # tables for storing estimates from linear models (rows are bin sizes)
     coeff_tbl <- as.data.frame(matrix(ncol=3, nrow=4))
@@ -997,27 +1205,29 @@ for(m in 1:num_models) {
     vif_tbl$scale <- c(1e+3, 1e+4, 1e+5, 1e+6)
     
     # standardizing variables to help interpretation of linear coefficients
-    tbl_1kb <- dplyr::select(maps_1kb, c(avg_mut, B, pi_exp))
-    std_1kb <- as.data.frame(apply(tbl_1kb, 2, function(x) (x-mean(x)) / sd(x)))
+    std_1kb <- as.data.frame(apply(maps_1kb, 2, function(x) (x-mean(x)) / sd(x)))
     std_1kb$bin <- 1:nrow(std_1kb)
     
-    tbl_10kb <- dplyr::select(maps_10kb, c(avg_mut, B, pi_exp))
-    std_10kb <- as.data.frame(apply(tbl_10kb, 2, function(x) (x-mean(x)) / sd(x)))
+    std_10kb <- as.data.frame(apply(maps_10kb, 2, function(x) (x-mean(x)) / sd(x)))
     std_10kb$bin <- 1:nrow(std_10kb)
     
-    tbl_100kb <- dplyr::select(maps_100kb, c(avg_mut, B, pi_exp))
-    std_100kb <- as.data.frame(apply(tbl_100kb, 2, function(x) (x-mean(x)) / sd(x)))
+    std_100kb <- as.data.frame(apply(maps_100kb, 2, function(x) (x-mean(x)) / sd(x)))
     std_100kb$bin <- 1:nrow(std_100kb)
     
-    tbl_1Mb <- dplyr::select(maps_1Mb, c(avg_mut, B, pi_exp))
-    std_1Mb <- as.data.frame(apply(tbl_1Mb, 2, function(x) (x-mean(x)) / sd(x)))
+    std_1Mb <- as.data.frame(apply(maps_1Mb, 2, function(x) (x-mean(x)) / sd(x)))
     std_1Mb$bin <- 1:nrow(std_1Mb)
     
     # 1 kb
-    m_1kb <- lm(pi_exp ~ (B + avg_mut) ^ 2, std_1kb)
+    m_1kb <- lm(sim_pi ~ (B + avg_mut) ^ 2, std_1kb)
     summary(m_1kb)
     r2_raw$r2_typeI[1] <- summary(m_1kb)$r.squared * 100
-    v1kb <- vif(m_1kb, type = 'predictor')
+    v1kb <- suppressMessages(vif(m_1kb, type = 'predictor'))
+    
+    dw_1kb <- dwtest(m_1kb)
+    hmc_1kb <- hmctest(m_1kb)
+    tests_tbl$DW_test_p[1] <- dw_1kb$p.value
+    tests_tbl$HMC_test_p[1] <- hmc_1kb$p.value
+    tests_tbl$Shapiro_test_p[1] <- NA
     
     vif_tbl$B[1] <- v1kb$GVIF[1]
     vif_tbl$u[1] <- v1kb$GVIF[2]
@@ -1039,10 +1249,17 @@ for(m in 1:num_models) {
     r2_tbl$B[1] <- anova.pi$VarExp[1] * 100
     
     # 10 kb
-    m_10kb <- lm(pi_exp ~ (B + avg_mut) ^ 2, std_10kb)
+    m_10kb <- lm(sim_pi ~ (B + avg_mut) ^ 2, std_10kb)
     summary(m_10kb)
     r2_raw$r2_typeI[2] <- summary(m_10kb)$r.squared * 100
-    v10kb <- vif(m_10kb, type = 'predictor')
+    v10kb <- suppressMessages(vif(m_10kb, type = 'predictor'))
+    
+    dw_10kb <- dwtest(m_10kb)
+    hmc_10kb <- hmctest(m_10kb)
+    shapiro_10kb <- shapiro.test(resid(m_10kb))
+    tests_tbl$DW_test_p[2] <- dw_10kb$p.value
+    tests_tbl$HMC_test_p[2] <- hmc_10kb$p.value
+    tests_tbl$Shapiro_test_p[2] <- shapiro_10kb$p.value
     
     vif_tbl$B[2] <- v10kb$GVIF[1]
     vif_tbl$u[2] <- v10kb$GVIF[2]
@@ -1064,10 +1281,17 @@ for(m in 1:num_models) {
     r2_tbl$B[2] <- anova.pi$VarExp[1] * 100
     
     # 100 kb
-    m_100kb <- lm(pi_exp ~ (B + avg_mut) ^ 2, std_100kb)
+    m_100kb <- lm(sim_pi ~ (B + avg_mut) ^ 2, std_100kb)
     summary(m_100kb)
     r2_raw$r2_typeI[3] <- summary(m_100kb)$r.squared * 100
-    v100kb <- vif(m_100kb, type = 'predictor')
+    v100kb <- suppressMessages(vif(m_100kb, type = 'predictor'))
+    
+    dw_100kb <- dwtest(m_100kb)
+    hmc_100kb <- hmctest(m_100kb)
+    shapiro_100kb <- shapiro.test(resid(m_100kb))
+    tests_tbl$DW_test_p[3] <- dw_100kb$p.value
+    tests_tbl$HMC_test_p[3] <- hmc_100kb$p.value
+    tests_tbl$Shapiro_test_p[3] <- shapiro_100kb$p.value
     
     vif_tbl$B[3] <- v100kb$GVIF[1]
     vif_tbl$u[3] <- v100kb$GVIF[2]
@@ -1089,10 +1313,17 @@ for(m in 1:num_models) {
     r2_tbl$B[3] <- anova.pi$VarExp[1] * 100
     
     # 1 Mb
-    m_1Mb <- lm(pi_exp ~ (B + avg_mut) ^ 2, data=std_1Mb)
+    m_1Mb <- lm(sim_pi ~ (B + avg_mut) ^ 2, data=std_1Mb)
     summary(m_1Mb)
     r2_raw$r2_typeI[4] <- summary(m_1Mb)$r.squared * 100
-    v1Mb <- vif(m_1Mb, type = 'predictor')
+    v1Mb <- suppressMessages(vif(m_1Mb, type = 'predictor'))
+    
+    dw_1Mb <- dwtest(m_1Mb)
+    hmc_1Mb <- hmctest(m_1Mb)
+    shapiro_1Mb <- shapiro.test(resid(m_1Mb))
+    tests_tbl$DW_test_p[4] <- dw_1Mb$p.value
+    tests_tbl$HMC_test_p[4] <- hmc_1Mb$p.value
+    tests_tbl$Shapiro_test_p[4] <- shapiro_1Mb$p.value
     
     vif_tbl$B[4] <- v1Mb$GVIF[1]
     vif_tbl$u[4] <- v1Mb$GVIF[2]
@@ -1113,13 +1344,131 @@ for(m in 1:num_models) {
     r2_tbl$u[4] <- anova.pi$VarExp[2] * 100
     r2_tbl$B[4] <- anova.pi$VarExp[1] * 100
     
-    fwrite(r2_raw, paste(prefix, "_r2_raw_tbl.csv", sep=""))
-    fwrite(coeff_tbl, paste(prefix, "_coeff_tbl.csv", sep=""))
-    fwrite(pval_tbl, paste(prefix, "_pval_tbl.csv", sep=""))
-    fwrite(r2_tbl, paste(prefix, "_r2_typeII_tbl.csv", sep=""))
-    fwrite(vif_tbl, paste(prefix, "_vif_tbl.csv", sep=""))
+    fwrite(r2_raw, paste("model_", m, "/rep_", rep, 
+                         "/r2_raw_tbl.csv", sep=""))
+    fwrite(coeff_tbl, paste("model_", m, "/rep_", rep, 
+                         "/coeff_tbl.csv", sep=""))
+    fwrite(pval_tbl, paste("model_", m, "/rep_", rep, 
+                         "/pval_tbl.csv", sep=""))
+    fwrite(r2_tbl, paste("model_", m, "/rep_", rep, 
+                         "/r2_typeII_tbl.csv", sep=""))
+    fwrite(vif_tbl, paste("model_", m, "/rep_", rep, 
+                         "/vif_tbl.csv", sep=""))
+    fwrite(tests_tbl, paste("model_", m, "/rep_", rep, 
+                         "/tests_tbl.csv", sep=""))
+
+    # 1 kb
+    df_1kb <- cbind.data.frame(resid(m_1kb), fitted(m_1kb))
+    names(df_1kb) <- c("residuals", "fitted")
+    p_1kb <- ggplot(data=df_1kb, aes(x=residuals, y=fitted)) + 
+             geom_point(size=2, shape=1) + 
+             theme_bw() + labs(title="1kb", x=NULL, y="Fitted") +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20))
+    
+    q_1kb <- ggplot(data=df_1kb, aes(x=residuals)) + 
+             geom_histogram(aes(y=..density..), bins=50) + 
+             stat_function(fun=dnorm, color="red",
+                           args=list(mean=mean(df_1kb$residuals), 
+                                    sd=sd(df_1kb$residuals))) +
+             theme_bw() + labs(title=NULL, x="Residuals", y="Count") +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20)) 
+    
+    lm_1kb <- plot_grid(p_1kb, q_1kb, ncol=1)
+    
+    # 10 kb
+    df_10kb <- cbind.data.frame(resid(m_10kb), fitted(m_10kb))
+    names(df_10kb) <- c("residuals", "fitted")
+    p_10kb <- ggplot(data=df_10kb, aes(x=residuals, y=fitted)) + 
+             geom_point(size=2, shape=1) + 
+             theme_bw() + labs(title="10 kb", x=NULL, y=NULL) +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20)) 
+    q_10kb <- ggplot(data=df_10kb, aes(x=residuals)) + 
+             geom_histogram(aes(y=..density..), bins=30) + 
+             stat_function(fun=dnorm, color="red",
+                           args=list(mean=mean(df_10kb$residuals), 
+                                    sd=sd(df_10kb$residuals))) +
+             theme_bw() + labs(title=NULL, x="Residuals", y=NULL) +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20)) 
+    
+    lm_10kb <- plot_grid(p_10kb, q_10kb, ncol=1)
+    
+    # 100 kb
+    df_100kb <- cbind.data.frame(resid(m_100kb), fitted(m_100kb))
+    names(df_100kb) <- c("residuals", "fitted")
+    p_100kb <- ggplot(data=df_100kb, aes(x=residuals, y=fitted)) + 
+             geom_point(size=2, shape=1) + 
+             theme_bw() + labs(title="100 kb", x=NULL, y=NULL) +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20)) 
+    q_100kb <- ggplot(data=df_100kb, aes(x=residuals)) + 
+             geom_histogram(aes(y=..density..), bins=15) + 
+             stat_function(fun=dnorm, color="red",
+                           args=list(mean=mean(df_100kb$residuals), 
+                                    sd=sd(df_100kb$residuals))) +
+             theme_bw() + labs(title=NULL, x="Residuals", y=NULL) +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20)) 
+    
+    lm_100kb <- plot_grid(p_100kb, q_100kb, ncol=1)
+    
+    # 1 Mb
+    df_1Mb <- cbind.data.frame(resid(m_1Mb), fitted(m_1Mb))
+    names(df_1Mb) <- c("residuals", "fitted")
+    p_1Mb <- ggplot(data=df_1Mb, aes(x=residuals, y=fitted)) + 
+             geom_point(size=2, shape=1) + 
+             theme_bw() + labs(title="1 Mb", x=NULL, y=NULL) +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20)) 
+    q_1Mb <- ggplot(data=df_1Mb, aes(x=residuals)) + 
+             geom_histogram(aes(y=..density..), bins=5) + 
+             stat_function(fun=dnorm, color="red",
+                           args=list(mean=mean(df_1Mb$residuals), 
+                                    sd=sd(df_1Mb$residuals))) +
+             theme_bw() + labs(title=NULL, x="Residuals", y=NULL) +
+             theme(axis.title.x=element_text(size=16),
+                   axis.text.x=element_text(size=12),
+                   axis.text.y=element_text(size=12),
+                   axis.title.y=element_text(size=16),
+                   plot.title=element_text(size=20)) 
+    
+    lm_1Mb <- plot_grid(p_1Mb, q_1Mb, ncol=1)
+    
+    lm_plots <- plot_grid(lm_1kb, lm_10kb, lm_100kb, lm_1Mb, nrow=1)
+    save_plot(paste("model_", m, "/rep_", rep, "/lm_plots.svg", sep=""),
+              lm_plots, base_height=10, base_width=20)
   }
 }
+```
+
+Structural Equation Modeling
+
+```{r SEM, include=F, message=F, warning=F}
+
 ```
 
 ```{r plots-exons-models, include=F, message=F, warning=F}
